--- a/views/sales_orders_inherit_views.xml
+++ b/views/sales_orders_inherit_views.xml
@@ -18,7 +18,7 @@
         <field name="inherit_id" ref="sale.view_quotation_tree_with_onboarding"/>
         <field name="arch" type="xml">
             <xpath expr="//tree" position="inside">
-                <field name="valid_discount_code"/>
+                <field name="valid_discount_code" />
             </xpath>
         </field>
     </record>
@@ -29,7 +29,7 @@
         <field name="inherit_id" ref="sale.view_order_tree"/>
         <field name="arch" type="xml">
             <xpath expr="//tree" position="inside">
-                <field name="valid_discount_code"/>
+                <field name="valid_discount_code" optional="show"/>
             </xpath>
         </field>
     </record>
