--- a/wizard/s_update_discount_code_views.xml
+++ b/wizard/s_update_discount_code_views.xml
@@ -4,7 +4,7 @@
         <field name="name">s_update_discount_code_view_form</field>
         <field name="model">s.update.discount.code</field>
         <field name="arch" type="xml">
-            <form string="s_update_discount_code_form" sequence="1">
+            <form string="s_update_discount_code_form">
                 <sheet>
                     <group>
                         <field name="partner_ids" widget="many2many_tags" readonly="1"/>
@@ -18,6 +18,14 @@
                 </footer>
             </form>
         </field>
+    </record>
+
+    <record id="s_partner_wizard_action" model="ir.actions.act_window">
+        <field name="name">Update Discount Code</field>
+        <field name="res_model">s.update.discount.code</field>
+        <field name="view_mode">form</field>
+        <field name="target">new</field>
+        <field name="binding_model_id" ref="model_res_partner"/>
     </record>
 
 </odoo>
