--- a/wizard/s_update_warranty_views.xml
+++ b/wizard/s_update_warranty_views.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <record id="s_update_discount_code_view_form" model="ir.ui.view">
+    <record id="s_update_update_warranty_view_form" model="ir.ui.view">
         <field name="name">s_update_warranty_view_form</field>
         <field name="model">s.update.warranty</field>
         <field name="arch" type="xml">
@@ -12,12 +12,21 @@
                 </sheet>
                 <footer>
                     <field name="input_date"/>
-                    <button name="update_warranty" string="Confirm" type="object"
+                    <button name="mass_update_warranty" string="Confirm" type="object"
                             class="btn-primary"/>
                     <button string="Cancel" class="btn-secondary" special="cancel" data-hotkey="z"/>
                 </footer>
             </form>
         </field>
     </record>
+
+    <record id="s_product_template_wizard_action" model="ir.actions.act_window">
+        <field name="name">Update warranty</field>
+        <field name="res_model">s.update.warranty</field>
+        <field name="view_mode">form</field>
+        <field name="target">new</field>
+        <field name="binding_model_id" ref="model_product_template"/>
+    </record>
+
 </odoo>
 
