--- a/views/product_template_inherit_views.xml
+++ b/views/product_template_inherit_views.xml
@@ -6,11 +6,11 @@
         <field name="inherit_id" ref="product.product_template_form_view"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='invoice_policy']" position="after">
-                <field name="date_from" groups="exam_1.advanced_sale_group_manager"/>
-                <field name="date_to" groups="exam_1.advanced_sale_group_manager"/>
-                <field name="product_warranty" groups="exam_1.advanced_sale_group_manager"/>
-                <field name="warranty_estimated_pt" groups="exam_1.advanced_sale_group_manager"/>
-                <field name="warranty_left" groups="exam_1.advanced_sale_group_manager"/>
+                <field name="date_from" groups="exam_1.advanced_sale_group_user"/>
+                <field name="date_to" groups="exam_1.advanced_sale_group_user"/>
+                <field name="product_warranty"/>
+                <field name="sale_order_discount_estimated_pt"/>
+                <field name="warranty_left"/>
             </xpath>
         </field>
     </record>
@@ -31,10 +31,12 @@
         <field name="model">product.template</field>
         <field name="inherit_id" ref="product.product_template_search_view"/>
         <field name="arch" type="xml">
-            <xpath expr="//filter[@name='inactive']" position="before">
-                <field name="warranty_left"/>
+            <xpath expr="//search/filter[@name='services']" position="before">
+                <filter name="warranty" string="Warranty Valid Until Today"
+                        domain="[('date_to','&gt;',context_today().strftime('%Y-%m-%d'))]"/>
             </xpath>
         </field>
     </record>
+
 
 </odoo>
