--- a/views/sales_orders_line_inherit_view.xml
+++ b/views/sales_orders_line_inherit_view.xml
@@ -6,13 +6,19 @@
         <field name="inherit_id" ref="sale.view_order_form"/>
         <field name="arch" type="xml">
             <xpath expr="////field[@name='order_line']/tree/field[23]" position="after">
-                <field name="discount_estimated_used" />
-                <field name="price_total_discount" />
+                <field name="price_total_discount"/>
 
             </xpath>
             <xpath expr="////field[@name='order_line']/tree/field[20]" position="after">
-                <field name="warranty_estimated_so" />
+                <field name="warranty_estimated_so"/>
+                <field name="numbers_percent"/>
             </xpath>
+
+            <xpath expr="////field[@name='order_line']/tree/field[@name='price_subtotal']" position="attributes">
+                <attribute name="invisible">1</attribute>
+            </xpath>
+
         </field>
     </record>
+
 </odoo>
