--- a/views/sales_orders_inherit_views.xml
+++ b/views/sales_orders_inherit_views.xml
@@ -7,7 +7,7 @@
         <field name="inherit_id" ref="sale.view_sales_order_filter"/>
         <field name="arch" type="xml">
             <xpath expr="//filter[@name='my_sale_orders_filter']" position="before">
-                <filter name="discount" string="Special Customer" domain="[('active_discount_code_so','=',True)]"/>
+                <filter name="valid" string="Special Customer" domain="[('customer_discount_code_so','like','VIP_')]"/>
             </xpath>
         </field>
     </record>
@@ -19,7 +19,7 @@
         <field name="arch" type="xml">
             <xpath expr="//tree" position="inside">
                 <field name="customer_discount_code_so"/>
-                <field name="active_discount_code_so" invisible="1"/>
+                <field name="active_discount_code_so" optional="show"/>
             </xpath>
         </field>
     </record>
@@ -34,6 +34,5 @@
             </xpath>
         </field>
     </record>
-
 
 </odoo>
